--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "middleware",
+  "name": "bookbuddy.1",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.25.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "express": "^4.18.2",
+    "mongodb": "^5.0.1"
   }
 }
