--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.3",
     "mongodb": "^5.0.1",
     "mongoose": "^7.0.1"
   }
