--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
     "mongodb": "^5.0.1",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.3"
   }
 }
