--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "http-status-codes": "^2.2.0",
     "mongodb": "^5.0.1",
     "mongoose": "^7.0.1",
